# modelscope

./: CHANGELOG.md  Cargo.toml  README.md  README_zh.md  justfile
.github/workflows/: publish.yml
examples/: callback_example.rs
src/: lib.rs  main.rs
