[package]
name = "modelscope-ng"
version = "0.1.2"
edition = "2024"
description = "A command-line interface tool for downloading models from Modelscope, which can also be used as a library"
license = "Apache-2.0"
repository = "https://github.com/Liangdi/modelscope"
documentation = "https://docs.rs/modelscope-ng"

[dependencies]
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.47", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.23", default-features = false,features = ["rustls-tls","json", "stream", "cookies"] }
clap = { version = "4.5.47", features = ["derive"] }
indicatif = "0.18.0"
futures-util = "0.3.31"
async-trait = "0.1.89"


[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
